updated at: 2020-03-07 15:34, 天使様の入れ物 - 烏箱 - BOOTH

--- a/VRChat/27/1141127.html
+++ b/VRChat/27/1141127.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      天使様の入れ物 - 篠山悪趣味堂 - BOOTH
+      天使様の入れ物 - 烏箱 - BOOTH
     </title>
     <meta name="description" content=
     "あの子はきっと中で夢でも見ていることでしょう 「R-9Cのアレ」イメージです テキスト無しのテクスチャも付属しているので、色を変えるなり中にいる子の写真を張るなりお好きにどうぞ。 君だけの天使様を作ろう！ ・ポリゴン数：3292 ・改変:可 ・商用利用:不可 ・再配布:不可 ・バイド物質含有率：無">
@@ -12,13 +12,13 @@
     <link rel="canonical" href="https://booth.pm/ja/items/1141127">
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="天使様の入れ物 - 篠山悪趣味堂 - BOOTH">
+    <meta name="twitter:title" content="天使様の入れ物 - 烏箱 - BOOTH">
     <meta name="twitter:description" content=
     "あの子はきっと中で夢でも見ていることでしょう 「R-9Cのアレ」イメージです テキスト無しのテクスチャも付属しているので、色を変えるなり中にいる子の写真を張るなりお好きにどうぞ。 君だけの天使様を作ろう！ ・ポリゴン数：3292 ・改変:可 ・商用利用:不可 ・再配布:不可 ・バイド物質含有率：無">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/9d628343-8c42-4954-af0a-3cec6c0cf6d7/i/1141127/3cc9ae1a-dc9c-4835-afc7-fb9fa5b37995_base_resized.jpg">
     <meta property="og:type" content="product">
-    <meta property="og:title" content="天使様の入れ物 - 篠山悪趣味堂 - BOOTH">
+    <meta property="og:title" content="天使様の入れ物 - 烏箱 - BOOTH">
     <meta property="og:description" content=
     "あの子はきっと中で夢でも見ていることでしょう 「R-9Cのアレ」イメージです テキスト無しのテクスチャも付属しているので、色を変えるなり中にいる子の写真を張るなりお好きにどうぞ。 君だけの天使様を作ろう！ ・ポリゴン数：3292 ・改変:可 ・商用利用:不可 ・再配布:不可 ・バイド物質含有率：無">
     <meta property="og:image" content=
@@ -117,11 +117,11 @@
                           href="https://kasasubako.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="篠山悪趣味堂" class=
+                            <img alt="烏箱" class=
                             "user-avatar at-item-summary" src=
-                            "https://booth.pximg.net/c/48x48/users/191771/icon_image/a4bbe8a8-faae-4be0-812d-a93188767213_base_resized.jpg">
+                            "https://booth.pximg.net/c/48x48/users/191771/icon_image/dc3a0852-70ff-400e-ab79-0cafd8ba8c43_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              篠山悪趣味堂
+                              烏箱
                             </div>
                           </div></a>
                         </div>
@@ -204,7 +204,7 @@
                           <a data-url=
                           "https://booth.pm/ja/items/1141127"
                           data-lang="ja" data-hashtags="booth_pm"
-                          data-text="天使様の入れ物 | 篠山悪趣味堂" data-count=
+                          data-text="天使様の入れ物 | 烏箱" data-count=
                           "none" class="twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
                           <div class="u-ml-300">
