updated at: 2020-03-07 15:34, すたんだーどふぉーすてきなもの - 烏箱 - BOOTH

--- a/VRChat/38/1140838.html
+++ b/VRChat/38/1140838.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      すたんだーどふぉーすてきなもの - 篠山悪趣味堂 - BOOTH
+      すたんだーどふぉーすてきなもの - 烏箱 - BOOTH
     </title>
     <meta name="description" content=
     "某シューティングゲームのアレっぽいもの ポリゴン数　1501　 マテリアル数　5 UVは自動展開したものそのままなので、サブスタンスペインター等でのテクスチャ作成をお勧めします。 ・改変:可 ・商用利用:不可 ・再配布:不可 ・バイド物質含有率：高">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "すたんだーどふぉーすてきなもの - 篠山悪趣味堂 - BOOTH">
+    "すたんだーどふぉーすてきなもの - 烏箱 - BOOTH">
     <meta name="twitter:description" content=
     "某シューティングゲームのアレっぽいもの ポリゴン数　1501　 マテリアル数　5 UVは自動展開したものそのままなので、サブスタンスペインター等でのテクスチャ作成をお勧めします。 ・改変:可 ・商用利用:不可 ・再配布:不可 ・バイド物質含有率：高">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/9d628343-8c42-4954-af0a-3cec6c0cf6d7/i/1140838/285a4e8e-9158-4c4c-89f5-8b584f723c66_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "すたんだーどふぉーすてきなもの - 篠山悪趣味堂 - BOOTH">
+    "すたんだーどふぉーすてきなもの - 烏箱 - BOOTH">
     <meta property="og:description" content=
     "某シューティングゲームのアレっぽいもの ポリゴン数　1501　 マテリアル数　5 UVは自動展開したものそのままなので、サブスタンスペインター等でのテクスチャ作成をお勧めします。 ・改変:可 ・商用利用:不可 ・再配布:不可 ・バイド物質含有率：高">
     <meta property="og:image" content=
@@ -119,11 +119,11 @@
                           href="https://kasasubako.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="篠山悪趣味堂" class=
+                            <img alt="烏箱" class=
                             "user-avatar at-item-summary" src=
-                            "https://booth.pximg.net/c/48x48/users/191771/icon_image/a4bbe8a8-faae-4be0-812d-a93188767213_base_resized.jpg">
+                            "https://booth.pximg.net/c/48x48/users/191771/icon_image/dc3a0852-70ff-400e-ab79-0cafd8ba8c43_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              篠山悪趣味堂
+                              烏箱
                             </div>
                           </div></a>
                         </div>
@@ -206,7 +206,7 @@
                           <a data-url=
                           "https://booth.pm/ja/items/1140838"
                           data-lang="ja" data-hashtags="booth_pm"
-                          data-text="すたんだーどふぉーすてきなもの | 篠山悪趣味堂"
+                          data-text="すたんだーどふぉーすてきなもの | 烏箱"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
