updated at: 2020-03-07 18:05, 【VRChat向け3Dモデル】サニア(sania) 改変セット - Shop Alt - BOOTH

--- a/VRChat/04/1383104.html
+++ b/VRChat/04/1383104.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      【VRChat向け3Dモデル】サニア 改変セット - Shop Alt - BOOTH
+      【VRChat向け3Dモデル】サニア(sania) 改変セット - Shop Alt - BOOTH
     </title>
     <meta name="description" content=
     "VRChat用に制作したオリジナル3Dモデルのサニアです。 VRChatでの利用を想定していますが、動画やゲーム制作にも自由にお使いいただけます。 ポリゴン数1000以下のローポリアバター！ 設定済みアップするだけunitypackageあります！ テクスチャpsd同梱！ ダイナミックボーンを使えばしっぽがプルプルします！ しっぽのボーンを削除するだけでOculus Questにも対応！ クロスプラットフォームで遊びたい方におすすめです！ ※public化して公開しているので試着・コピーしたいぞという方は下記アカウントまでお気軽にご連絡ください※">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "【VRChat向け3Dモデル】サニア 改変セット - Shop Alt - BOOTH">
+    "【VRChat向け3Dモデル】サニア(sania) 改変セット - Shop Alt - BOOTH">
     <meta name="twitter:description" content=
     "VRChat用に制作したオリジナル3Dモデルのサニアです。 VRChatでの利用を想定していますが、動画やゲーム制作にも自由にお使いいただけます。 ポリゴン数1000以下のローポリアバター！ 設定済みアップするだけunitypackageあります！ テクスチャpsd同梱！ ダイナミックボーンを使えばしっぽがプルプルします！ しっぽのボーンを削除するだけでOculus Questにも対応！ クロスプラットフォームで遊びたい方におすすめです！ ※public化して公開しているので試着・コピーしたいぞという方は下記アカウントまでお気軽にご連絡ください※">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/81ecc4de-6b51-48cf-8484-df24cee7afd3/i/1383104/5c898ffe-3d61-482a-b8da-1c197372cf55_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "【VRChat向け3Dモデル】サニア 改変セット - Shop Alt - BOOTH">
+    "【VRChat向け3Dモデル】サニア(sania) 改変セット - Shop Alt - BOOTH">
     <meta property="og:description" content=
     "VRChat用に制作したオリジナル3Dモデルのサニアです。 VRChatでの利用を想定していますが、動画やゲーム制作にも自由にお使いいただけます。 ポリゴン数1000以下のローポリアバター！ 設定済みアップするだけunitypackageあります！ テクスチャpsd同梱！ ダイナミックボーンを使えばしっぽがプルプルします！ しっぽのボーンを削除するだけでOculus Questにも対応！ クロスプラットフォームで遊びたい方におすすめです！ ※public化して公開しているので試着・コピーしたいぞという方は下記アカウントまでお気軽にご連絡ください※">
     <meta property="og:image" content=
@@ -130,7 +130,7 @@
                         </div>
                         <h2 class=
                         "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
-                          【VRChat向け3Dモデル】サニア 改変セット
+                          【VRChat向け3Dモデル】サニア(sania) 改変セット
                         </h2>
                         <div class=
                         "u-text-assertive u-tpg-caption1"></div>
@@ -224,7 +224,7 @@
                           "https://booth.pm/ja/items/1383104"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "【VRChat向け3Dモデル】サニア 改変セット | Shop Alt"
+                          "【VRChat向け3Dモデル】サニア(sania) 改変セット | Shop Alt"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
@@ -243,7 +243,8 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="【VRChat向け3Dモデル】サニア 改変セット"
+                            <img alt=
+                            "【VRChat向け3Dモデル】サニア(sania) 改変セット"
                             class="market-item-detail-item-image"
                             src=
                             "https://booth.pximg.net/81ecc4de-6b51-48cf-8484-df24cee7afd3/i/1383104/5c898ffe-3d61-482a-b8da-1c197372cf55_base_resized.jpg">
@@ -252,7 +253,8 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="【VRChat向け3Dモデル】サニア 改変セット"
+                            <img alt=
+                            "【VRChat向け3Dモデル】サニア(sania) 改変セット"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/81ecc4de-6b51-48cf-8484-df24cee7afd3/i/1383104/bd3abbe6-c968-4f29-9a83-6c4adb84972d_base_resized.jpg">
@@ -261,7 +263,8 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="【VRChat向け3Dモデル】サニア 改変セット"
+                            <img alt=
+                            "【VRChat向け3Dモデル】サニア(sania) 改変セット"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/81ecc4de-6b51-48cf-8484-df24cee7afd3/i/1383104/21382dbe-7c9b-4767-849c-16c0407fb378_base_resized.jpg">
@@ -270,7 +273,8 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="【VRChat向け3Dモデル】サニア 改変セット"
+                            <img alt=
+                            "【VRChat向け3Dモデル】サニア(sania) 改変セット"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/81ecc4de-6b51-48cf-8484-df24cee7afd3/i/1383104/3e97c9ba-9d57-4a5d-b3a3-039bf6ecdc16_base_resized.jpg">
@@ -279,7 +283,8 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="【VRChat向け3Dモデル】サニア 改変セット"
+                            <img alt=
+                            "【VRChat向け3Dモデル】サニア(sania) 改変セット"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/81ecc4de-6b51-48cf-8484-df24cee7afd3/i/1383104/4f883523-a61e-4647-93e9-35bc5d4e2461_base_resized.jpg">
