--- a/VRChat/54/1294254.html
+++ b/VRChat/54/1294254.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      白薔薇の花束(卒業や入学、結婚の場面に！) - 顔芸先輩の革命箱 - BOOTH
+      白薔薇の花束(卒業や入学、結婚の場面に！) - Loyal・Fragment - BOOTH
     </title>
     <meta name="description" content=
     "-------------------------------------------------------------------- 『白薔薇の花束』ver1.0 利用規約 -------------------------------------------------------------------- この度は、『白薔薇の花束』をご覧頂き誠に有難うございます。 モデルを購入する際は以下にご注意ください。 -------------------------------------------------------------------- ■動作環境について 推奨環境:">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "白薔薇の花束(卒業や入学、結婚の場面に！) - 顔芸先輩の革命箱 - BOOTH">
+    "白薔薇の花束(卒業や入学、結婚の場面に！) - Loyal・Fragment - BOOTH">
     <meta name="twitter:description" content=
     "-------------------------------------------------------------------- 『白薔薇の花束』ver1.0 利用規約 -------------------------------------------------------------------- この度は、『白薔薇の花束』をご覧頂き誠に有難うございます。 モデルを購入する際は以下にご注意ください。 -------------------------------------------------------------------- ■動作環境について 推奨環境:">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/94c20b3d-fc21-4e25-9bc8-06b8eaba8e71/i/1294254/f906b70a-a508-4edd-9734-6eb4bdb24c3d_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "白薔薇の花束(卒業や入学、結婚の場面に！) - 顔芸先輩の革命箱 - BOOTH">
+    "白薔薇の花束(卒業や入学、結婚の場面に！) - Loyal・Fragment - BOOTH">
     <meta property="og:description" content=
     "-------------------------------------------------------------------- 『白薔薇の花束』ver1.0 利用規約 -------------------------------------------------------------------- この度は、『白薔薇の花束』をご覧頂き誠に有難うございます。 モデルを購入する際は以下にご注意ください。 -------------------------------------------------------------------- ■動作環境について 推奨環境:">
     <meta property="og:image" content=
@@ -119,11 +119,11 @@
                           href="https://mktkakumei.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="顔芸先輩の革命箱" class=
+                            <img alt="Loyal・Fragment" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/2509652/icon_image/ab84ca6b-9ba7-4312-9870-4ff6a34970a0_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              顔芸先輩の革命箱
+                              Loyal・Fragment
                             </div>
                           </div></a>
                         </div>
@@ -224,7 +224,7 @@
                           "https://booth.pm/ja/items/1294254"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "白薔薇の花束(卒業や入学、結婚の場面に！) | 顔芸先輩の革命箱"
+                          "白薔薇の花束(卒業や入学、結婚の場面に！) | Loyal・Fragment"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
