updated at: 2020-03-07 23:57, スクエアアカデミックキャップ(卒業式用の帽子) - Loyal・Fragment - BOOTH

--- a/VRChat/24/1264924.html
+++ b/VRChat/24/1264924.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      スクエアアカデミックキャップ(卒業式用の帽子) - 顔芸先輩の革命箱 - BOOTH
+      スクエアアカデミックキャップ(卒業式用の帽子) - Loyal・Fragment - BOOTH
     </title>
     <meta name="description" content=
     "-------------------------------------------------------------------- 『スクエアアカデミックキャップ(卒業式用の帽子)』ver1.0 利用規約 -------------------------------------------------------------------- モデルを使う際は以下にご注意ください。 -------------------------------------------------------------------- ■動作環境について 推奨環境: Windows10(メモリ8GB)">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "スクエアアカデミックキャップ(卒業式用の帽子) - 顔芸先輩の革命箱 - BOOTH">
+    "スクエアアカデミックキャップ(卒業式用の帽子) - Loyal・Fragment - BOOTH">
     <meta name="twitter:description" content=
     "-------------------------------------------------------------------- 『スクエアアカデミックキャップ(卒業式用の帽子)』ver1.0 利用規約 -------------------------------------------------------------------- モデルを使う際は以下にご注意ください。 -------------------------------------------------------------------- ■動作環境について 推奨環境: Windows10(メモリ8GB)">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/94c20b3d-fc21-4e25-9bc8-06b8eaba8e71/i/1264924/59c77b55-341e-4f6e-bfc7-bf16a0b93a26_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "スクエアアカデミックキャップ(卒業式用の帽子) - 顔芸先輩の革命箱 - BOOTH">
+    "スクエアアカデミックキャップ(卒業式用の帽子) - Loyal・Fragment - BOOTH">
     <meta property="og:description" content=
     "-------------------------------------------------------------------- 『スクエアアカデミックキャップ(卒業式用の帽子)』ver1.0 利用規約 -------------------------------------------------------------------- モデルを使う際は以下にご注意ください。 -------------------------------------------------------------------- ■動作環境について 推奨環境: Windows10(メモリ8GB)">
     <meta property="og:image" content=
@@ -119,11 +119,11 @@
                           href="https://mktkakumei.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="顔芸先輩の革命箱" class=
+                            <img alt="Loyal・Fragment" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/2509652/icon_image/ab84ca6b-9ba7-4312-9870-4ff6a34970a0_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              顔芸先輩の革命箱
+                              Loyal・Fragment
                             </div>
                           </div></a>
                         </div>
@@ -224,7 +224,7 @@
                           "https://booth.pm/ja/items/1264924"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "スクエアアカデミックキャップ(卒業式用の帽子) | 顔芸先輩の革命箱"
+                          "スクエアアカデミックキャップ(卒業式用の帽子) | Loyal・Fragment"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
