updated at: 2020-03-08 00:27, 【無料】企業展示会とかでよくある紙袋【Vケット2】 - おきつね商事 Okitsune-Syoji - BOOTH

--- a/VRChat/19/1259919.html
+++ b/VRChat/19/1259919.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      【無料】企業展示会とかでよくある紙袋【Vケット2】 - おきつね商事 - BOOTH
+      【無料】企業展示会とかでよくある紙袋【Vケット2】 - おきつね商事 Okitsune-Syoji - BOOTH
     </title>
     <meta name="description" content=
     "企業の展示会とかでなんかよく配られる紙袋です。 Vケット2出展記念で無料で頒布いたします。 中身は入っていません UVとかガバガバですが、シンプルなパターンのテクスチャとかならうまいこと柄変えられるかと思います。 一応ブースト用の有料版もありますが中身は全く変わりません ▼内容物 kamibukuro.unitypackage Unityにインポートして利用ください。 ▼利用規約など VRChat以外での利用も可能です。 現状では個人クリエイター規模の利用しか想定していないため、 ないとは思いますが、法人など大規模な利用をする場合はお問い合わせください。">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "【無料】企業展示会とかでよくある紙袋【Vケット2】 - おきつね商事 - BOOTH">
+    "【無料】企業展示会とかでよくある紙袋【Vケット2】 - おきつね商事 Okitsune-Syoji - BOOTH">
     <meta name="twitter:description" content=
     "企業の展示会とかでなんかよく配られる紙袋です。 Vケット2出展記念で無料で頒布いたします。 中身は入っていません UVとかガバガバですが、シンプルなパターンのテクスチャとかならうまいこと柄変えられるかと思います。 一応ブースト用の有料版もありますが中身は全く変わりません ▼内容物 kamibukuro.unitypackage Unityにインポートして利用ください。 ▼利用規約など VRChat以外での利用も可能です。 現状では個人クリエイター規模の利用しか想定していないため、 ないとは思いますが、法人など大規模な利用をする場合はお問い合わせください。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/62c33efe-c472-4462-8a8e-ab57ac471bad/i/1259919/3a743978-175e-4346-b6e9-163ef5d94783_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "【無料】企業展示会とかでよくある紙袋【Vケット2】 - おきつね商事 - BOOTH">
+    "【無料】企業展示会とかでよくある紙袋【Vケット2】 - おきつね商事 Okitsune-Syoji - BOOTH">
     <meta property="og:description" content=
     "企業の展示会とかでなんかよく配られる紙袋です。 Vケット2出展記念で無料で頒布いたします。 中身は入っていません UVとかガバガバですが、シンプルなパターンのテクスチャとかならうまいこと柄変えられるかと思います。 一応ブースト用の有料版もありますが中身は全く変わりません ▼内容物 kamibukuro.unitypackage Unityにインポートして利用ください。 ▼利用規約など VRChat以外での利用も可能です。 現状では個人クリエイター規模の利用しか想定していないため、 ないとは思いますが、法人など大規模な利用をする場合はお問い合わせください。">
     <meta property="og:image" content=
@@ -132,11 +132,11 @@
                           href="https://kenomo.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="おきつね商事" class=
+                            <img alt="おきつね商事 Okitsune-Syoji" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/5852407/icon_image/ddc3b98a-1315-4f5e-9ea6-a6ba5e6c72f1_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              おきつね商事
+                              おきつね商事 Okitsune-Syoji
                             </div>
                           </div></a>
                         </div>
@@ -287,7 +287,7 @@
                           "https://booth.pm/ja/items/1259919"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "【無料】企業展示会とかでよくある紙袋【Vケット2】 | おきつね商事"
+                          "【無料】企業展示会とかでよくある紙袋【Vケット2】 | おきつね商事 Okitsune-Syoji"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
