updated at: 2020-03-08 02:50, メガホン(拡声器)VRChat想定 - おきつね商事 Okitsune-Syoji - BOOTH

--- a/VRChat/38/1174838.html
+++ b/VRChat/38/1174838.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      メガホン(拡声器)VRChat想定 - おきつね商事 - BOOTH
+      メガホン(拡声器)VRChat想定 - おきつね商事 Okitsune-Syoji - BOOTH
     </title>
     <meta name="description" content=
     "シンプルなデザインのメガホン（拡声器）です。 VRChatでの使用を想定しております。 △3806ポリゴン　１マテリアル　カラバリ４色 ▼内容物 Megahon.unitypackage Unityにインポートして利用ください。 Albedoテクスチャが４種類付属しています。 用途やお好みに合わせて使い分けてください。 ▼利用規約など VRChat以外での利用も可能です。 現状では個人クリエイター規模の利用しか想定していないため、 ないとは思いますが、法人など大規模な利用をする場合はお問い合わせください。 当モデルの利用権利は購入者個人に紐付きます。">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "メガホン(拡声器)VRChat想定 - おきつね商事 - BOOTH">
+    "メガホン(拡声器)VRChat想定 - おきつね商事 Okitsune-Syoji - BOOTH">
     <meta name="twitter:description" content=
     "シンプルなデザインのメガホン（拡声器）です。 VRChatでの使用を想定しております。 △3806ポリゴン　１マテリアル　カラバリ４色 ▼内容物 Megahon.unitypackage Unityにインポートして利用ください。 Albedoテクスチャが４種類付属しています。 用途やお好みに合わせて使い分けてください。 ▼利用規約など VRChat以外での利用も可能です。 現状では個人クリエイター規模の利用しか想定していないため、 ないとは思いますが、法人など大規模な利用をする場合はお問い合わせください。 当モデルの利用権利は購入者個人に紐付きます。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/62c33efe-c472-4462-8a8e-ab57ac471bad/i/1174838/7cc3cf38-4daf-4d2b-9689-6979f0878803_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "メガホン(拡声器)VRChat想定 - おきつね商事 - BOOTH">
+    "メガホン(拡声器)VRChat想定 - おきつね商事 Okitsune-Syoji - BOOTH">
     <meta property="og:description" content=
     "シンプルなデザインのメガホン（拡声器）です。 VRChatでの使用を想定しております。 △3806ポリゴン　１マテリアル　カラバリ４色 ▼内容物 Megahon.unitypackage Unityにインポートして利用ください。 Albedoテクスチャが４種類付属しています。 用途やお好みに合わせて使い分けてください。 ▼利用規約など VRChat以外での利用も可能です。 現状では個人クリエイター規模の利用しか想定していないため、 ないとは思いますが、法人など大規模な利用をする場合はお問い合わせください。 当モデルの利用権利は購入者個人に紐付きます。">
     <meta property="og:image" content=
@@ -132,11 +132,11 @@
                           href="https://kenomo.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="おきつね商事" class=
+                            <img alt="おきつね商事 Okitsune-Syoji" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/5852407/icon_image/ddc3b98a-1315-4f5e-9ea6-a6ba5e6c72f1_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              おきつね商事
+                              おきつね商事 Okitsune-Syoji
                             </div>
                           </div></a>
                         </div>
@@ -234,7 +234,8 @@
                           <a data-url=
                           "https://booth.pm/ja/items/1174838"
                           data-lang="ja" data-hashtags="booth_pm"
-                          data-text="メガホン(拡声器)VRChat想定 | おきつね商事"
+                          data-text=
+                          "メガホン(拡声器)VRChat想定 | おきつね商事 Okitsune-Syoji"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
