--- a/VRChat/50/1165750.html
+++ b/VRChat/50/1165750.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      けのも式狛狐[UnityPackage] - おきつね商事 - BOOTH
+      けのも式狛狐[UnityPackage] - おきつね商事 Okitsune-Syoji - BOOTH
     </title>
     <meta name="description" content=
     "2019/01/07　修正 テクスチャの統合を忘れていたので修正しました。 稲荷神社においてる狛狐です。 ワールドのインテリアやAFKアバター用とかに使ってください 内容物：UnityPackageのみ 現状では個人クリエイター規模の利用しか想定していないため、 ないとは思いますが、法人など大規模な利用をする場合はお問い合わせください。 当モデルの利用権利は購入者個人に紐付きます。 商用利用/私的利用　ご自由にお使いください。 ですが、当モデルを使用した際、使用者側にいかなる不利益が発生した場合でも当方は一切責任を負いません。">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "けのも式狛狐[UnityPackage] - おきつね商事 - BOOTH">
+    "けのも式狛狐[UnityPackage] - おきつね商事 Okitsune-Syoji - BOOTH">
     <meta name="twitter:description" content=
     "2019/01/07　修正 テクスチャの統合を忘れていたので修正しました。 稲荷神社においてる狛狐です。 ワールドのインテリアやAFKアバター用とかに使ってください 内容物：UnityPackageのみ 現状では個人クリエイター規模の利用しか想定していないため、 ないとは思いますが、法人など大規模な利用をする場合はお問い合わせください。 当モデルの利用権利は購入者個人に紐付きます。 商用利用/私的利用　ご自由にお使いください。 ですが、当モデルを使用した際、使用者側にいかなる不利益が発生した場合でも当方は一切責任を負いません。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/62c33efe-c472-4462-8a8e-ab57ac471bad/i/1165750/1758b854-b780-477b-9536-631b98bc7d9c_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "けのも式狛狐[UnityPackage] - おきつね商事 - BOOTH">
+    "けのも式狛狐[UnityPackage] - おきつね商事 Okitsune-Syoji - BOOTH">
     <meta property="og:description" content=
     "2019/01/07　修正 テクスチャの統合を忘れていたので修正しました。 稲荷神社においてる狛狐です。 ワールドのインテリアやAFKアバター用とかに使ってください 内容物：UnityPackageのみ 現状では個人クリエイター規模の利用しか想定していないため、 ないとは思いますが、法人など大規模な利用をする場合はお問い合わせください。 当モデルの利用権利は購入者個人に紐付きます。 商用利用/私的利用　ご自由にお使いください。 ですが、当モデルを使用した際、使用者側にいかなる不利益が発生した場合でも当方は一切責任を負いません。">
     <meta property="og:image" content=
@@ -132,11 +132,11 @@
                           href="https://kenomo.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="おきつね商事" class=
+                            <img alt="おきつね商事 Okitsune-Syoji" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/5852407/icon_image/ddc3b98a-1315-4f5e-9ea6-a6ba5e6c72f1_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              おきつね商事
+                              おきつね商事 Okitsune-Syoji
                             </div>
                           </div></a>
                         </div>
@@ -234,7 +234,8 @@
                           <a data-url=
                           "https://booth.pm/ja/items/1165750"
                           data-lang="ja" data-hashtags="booth_pm"
-                          data-text="けのも式狛狐[UnityPackage] | おきつね商事"
+                          data-text=
+                          "けのも式狛狐[UnityPackage] | おきつね商事 Okitsune-Syoji"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
