updated at: 2020-03-08 03:12, 【Vケット３対応】展示会用パーテーション　VRChat - おきつね商事 Okitsune-Syoji - BOOTH

--- a/VRChat/45/1164245.html
+++ b/VRChat/45/1164245.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      【Vケット３対応】展示会用パーテーション　VRChat - おきつね商事 - BOOTH
+      【Vケット３対応】展示会用パーテーション　VRChat - おきつね商事 Okitsune-Syoji - BOOTH
     </title>
     <meta name="description" content=
     "展示会とかでよく使うパーテーションを作りました。 バーチャルマーケット３（Vケット3）のブースサイズ規定に収まっているそのまま使えるサンプル付属です。やったぜ ▼更新情報 ★2019/06/03　アップデート Vケット3のブース規定に合わせたサンプルを追加しました。 ファイル名とかいろいろわかりやすくしました 2019/01/12 モデルのUVを修正しました。 →boadマテリアルなどに柄ものテクスチャ等適用できるようになりました。 ▼内容物 超適当なお品書き（2019/06/03） ★Sample_Booth_Vket3.unitypackage">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "【Vケット３対応】展示会用パーテーション　VRChat - おきつね商事 - BOOTH">
+    "【Vケット３対応】展示会用パーテーション　VRChat - おきつね商事 Okitsune-Syoji - BOOTH">
     <meta name="twitter:description" content=
     "展示会とかでよく使うパーテーションを作りました。 バーチャルマーケット３（Vケット3）のブースサイズ規定に収まっているそのまま使えるサンプル付属です。やったぜ ▼更新情報 ★2019/06/03　アップデート Vケット3のブース規定に合わせたサンプルを追加しました。 ファイル名とかいろいろわかりやすくしました 2019/01/12 モデルのUVを修正しました。 →boadマテリアルなどに柄ものテクスチャ等適用できるようになりました。 ▼内容物 超適当なお品書き（2019/06/03） ★Sample_Booth_Vket3.unitypackage">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/62c33efe-c472-4462-8a8e-ab57ac471bad/i/1164245/67247524-44f7-441a-a956-d53d5153da2b_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "【Vケット３対応】展示会用パーテーション　VRChat - おきつね商事 - BOOTH">
+    "【Vケット３対応】展示会用パーテーション　VRChat - おきつね商事 Okitsune-Syoji - BOOTH">
     <meta property="og:description" content=
     "展示会とかでよく使うパーテーションを作りました。 バーチャルマーケット３（Vケット3）のブースサイズ規定に収まっているそのまま使えるサンプル付属です。やったぜ ▼更新情報 ★2019/06/03　アップデート Vケット3のブース規定に合わせたサンプルを追加しました。 ファイル名とかいろいろわかりやすくしました 2019/01/12 モデルのUVを修正しました。 →boadマテリアルなどに柄ものテクスチャ等適用できるようになりました。 ▼内容物 超適当なお品書き（2019/06/03） ★Sample_Booth_Vket3.unitypackage">
     <meta property="og:image" content=
@@ -132,11 +132,11 @@
                           href="https://kenomo.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="おきつね商事" class=
+                            <img alt="おきつね商事 Okitsune-Syoji" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/5852407/icon_image/ddc3b98a-1315-4f5e-9ea6-a6ba5e6c72f1_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              おきつね商事
+                              おきつね商事 Okitsune-Syoji
                             </div>
                           </div></a>
                         </div>
@@ -235,7 +235,7 @@
                           "https://booth.pm/ja/items/1164245"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "【Vケット３対応】展示会用パーテーション　VRChat | おきつね商事"
+                          "【Vケット３対応】展示会用パーテーション　VRChat | おきつね商事 Okitsune-Syoji"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
