--- a/VRChat/32/1324832.html
+++ b/VRChat/32/1324832.html
@@ -27,6 +27,7 @@
     "https://booth.pximg.net/c/620x620/a21a27ab-2904-4259-80af-428e002dbca9/i/1324832/5f50fcc0-bb1e-417c-a55b-f98da915e454_base_resized.jpg">
     <meta property="og:url" content=
     "https://booth.pm/ja/items/1324832">
+    <meta name="ga:shop" content="UA-159987499-1">
     <meta name="ga_dimension1" content="customer">
     <meta name="ga_dimension2" content="no">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
