updated at: 2020-03-09 15:28, 【オリジナル３Dモデル】ミスリルソード/ダガー ver.1.0.0 - 有坂のちょっといいお店 - BOOTH

--- a/VRChat/34/1362334.html
+++ b/VRChat/34/1362334.html
@@ -3,26 +3,26 @@
   <head>
     <meta charset="utf-8">
     <title>
-      【オリジナル３Dモデル】ミスリルソード/ダガー ver.1.0.0 - MK's Item Shop - BOOTH
+      【オリジナル３Dモデル】ミスリルソード/ダガー ver.1.0.0 - 有坂のちょっといいお店 - BOOTH
     </title>
     <meta name="description" content=
-    "【オリジナル3Dモデル】ミスリルソード/ダガー 制作者　エムシャケ ◆VRChat向けセットアップ済みのデータとなりますが、UnityやUE4をはじめ他のソフトウェアでもお使いいただけます。 ◆ご購入の前に以下の利用規約をお読みいただき、ご了承された上でのご購入をお願いいたします。 ◆ある異世界のミスリル鉱石でできた直剣/短剣です。">
+    "【オリジナル3Dモデル】ミスリルソード/ダガー 制作者　有坂みと ◆VRChat向けセットアップ済みのデータとなりますが、UnityやUE4をはじめ他のソフトウェアでもお使いいただけます。 ◆ご購入の前に以下の利用規約をお読みいただき、ご了承された上でのご購入をお願いいたします。 ◆ある異世界のミスリル鉱石でできた直剣/短剣です。">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1362334">
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "【オリジナル３Dモデル】ミスリルソード/ダガー ver.1.0.0 - MK's Item Shop - BOOTH">
+    "【オリジナル３Dモデル】ミスリルソード/ダガー ver.1.0.0 - 有坂のちょっといいお店 - BOOTH">
     <meta name="twitter:description" content=
-    "【オリジナル3Dモデル】ミスリルソード/ダガー 制作者　エムシャケ ◆VRChat向けセットアップ済みのデータとなりますが、UnityやUE4をはじめ他のソフトウェアでもお使いいただけます。 ◆ご購入の前に以下の利用規約をお読みいただき、ご了承された上でのご購入をお願いいたします。 ◆ある異世界のミスリル鉱石でできた直剣/短剣です。">
+    "【オリジナル3Dモデル】ミスリルソード/ダガー 制作者　有坂みと ◆VRChat向けセットアップ済みのデータとなりますが、UnityやUE4をはじめ他のソフトウェアでもお使いいただけます。 ◆ご購入の前に以下の利用規約をお読みいただき、ご了承された上でのご購入をお願いいたします。 ◆ある異世界のミスリル鉱石でできた直剣/短剣です。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/1ae5d9f5-29a4-4574-ab86-a316c22db92a/i/1362334/7032d426-6367-45c7-856b-0b7716dd220d_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "【オリジナル３Dモデル】ミスリルソード/ダガー ver.1.0.0 - MK's Item Shop - BOOTH">
+    "【オリジナル３Dモデル】ミスリルソード/ダガー ver.1.0.0 - 有坂のちょっといいお店 - BOOTH">
     <meta property="og:description" content=
-    "【オリジナル3Dモデル】ミスリルソード/ダガー 制作者　エムシャケ ◆VRChat向けセットアップ済みのデータとなりますが、UnityやUE4をはじめ他のソフトウェアでもお使いいただけます。 ◆ご購入の前に以下の利用規約をお読みいただき、ご了承された上でのご購入をお願いいたします。 ◆ある異世界のミスリル鉱石でできた直剣/短剣です。">
+    "【オリジナル3Dモデル】ミスリルソード/ダガー 制作者　有坂みと ◆VRChat向けセットアップ済みのデータとなりますが、UnityやUE4をはじめ他のソフトウェアでもお使いいただけます。 ◆ご購入の前に以下の利用規約をお読みいただき、ご了承された上でのご購入をお願いいたします。 ◆ある異世界のミスリル鉱石でできた直剣/短剣です。">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/1ae5d9f5-29a4-4574-ab86-a316c22db92a/i/1362334/7032d426-6367-45c7-856b-0b7716dd220d_base_resized.jpg">
     <meta property="og:url" content=
@@ -119,11 +119,11 @@
                           href="https://mk22.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="MK's Item Shop " class=
+                            <img alt="有坂のちょっといいお店" class=
                             "user-avatar at-item-summary" src=
-                            "https://booth.pximg.net/c/48x48/users/694586/icon_image/afeac8d0-c596-44d7-9cf0-c25f7c39ae3e_base_resized.jpg">
+                            "https://booth.pximg.net/c/48x48/users/694586/icon_image/f22b6311-80c6-4086-847d-1700573e328d_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              MK's Item Shop
+                              有坂のちょっといいお店
                             </div>
                           </div></a>
                         </div>
@@ -222,7 +222,7 @@
                           "https://booth.pm/ja/items/1362334"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "【オリジナル３Dモデル】ミスリルソード/ダガー ver.1.0.0 | MK's Item Shop"
+                          "【オリジナル３Dモデル】ミスリルソード/ダガー ver.1.0.0 | 有坂のちょっといいお店"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
@@ -289,7 +289,7 @@
                         <div class=
                         "js-market-item-detail-description">
                           <p class="autolink u-text-wrap">
-                            【オリジナル3Dモデル】ミスリルソード/ダガー 制作者　エムシャケ
+                            【オリジナル3Dモデル】ミスリルソード/ダガー 制作者　有坂みと
                             ◆VRChat向けセットアップ済みのデータとなりますが、UnityやUE4をはじめ他のソフトウェアでもお使いいただけます。
                             ◆ご購入の前に以下の利用規約をお読みいただき、ご了承された上でのご購入をお願いいたします。
                             ◆ある異世界のミスリル鉱石でできた直剣/短剣です。
