--- a/VRChat/24/1111224.html
+++ b/VRChat/24/1111224.html
@@ -6,7 +6,7 @@
       亜久涼子(アクリョーコ) / Ryoko Aku【3Dモデル】 - 渡篠処（わたしのところ） - BOOTH
     </title>
     <meta name="description" content=
-    "『霊生を謳歌する悪霊』をモチーフとしたオリジナル3Dモデルです。 VRMファイル付き！ SNS推奨ハッシュタグ: #RyokoAku ☑obakeムーブとは: https://twitter.com/NamaeWatashino/status/1092789099650404353 ⚠Unitypackageインポート前に⚠ 事前に以下のAssetsをプロジェクト内にインポートしておいてください。 ・ReflexShader2.0 ・DynamicBone ℹVRChatへのアバターアップロード手順：">
+    "『霊生を謳歌する悪霊』がコンセプトのオリジナル3Dモデルです。 VRMファイル付き！ SNS推奨ハッシュタグ: #RyokoAku ☑obakeムーブとは: https://twitter.com/NamaeWatashino/status/1092789099650404353 ⚠Unitypackageインポート前に⚠ 事前に以下のAssetsをプロジェクト内にインポートしておいてください。 ・ReflexShader2.0 ・DynamicBone ℹVRChatへのアバターアップロード手順：">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1111224">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "亜久涼子(アクリョーコ) / Ryoko Aku【3Dモデル】 - 渡篠処（わたしのところ） - BOOTH">
     <meta name="twitter:description" content=
-    "『霊生を謳歌する悪霊』をモチーフとしたオリジナル3Dモデルです。 VRMファイル付き！ SNS推奨ハッシュタグ: #RyokoAku ☑obakeムーブとは: https://twitter.com/NamaeWatashino/status/1092789099650404353 ⚠Unitypackageインポート前に⚠ 事前に以下のAssetsをプロジェクト内にインポートしておいてください。 ・ReflexShader2.0 ・DynamicBone ℹVRChatへのアバターアップロード手順：">
+    "『霊生を謳歌する悪霊』がコンセプトのオリジナル3Dモデルです。 VRMファイル付き！ SNS推奨ハッシュタグ: #RyokoAku ☑obakeムーブとは: https://twitter.com/NamaeWatashino/status/1092789099650404353 ⚠Unitypackageインポート前に⚠ 事前に以下のAssetsをプロジェクト内にインポートしておいてください。 ・ReflexShader2.0 ・DynamicBone ℹVRChatへのアバターアップロード手順：">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/1154c32c-e4a4-4167-b688-5231756d79b1/i/1111224/6f150615-939b-481b-a716-5b83fe1e9659_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "亜久涼子(アクリョーコ) / Ryoko Aku【3Dモデル】 - 渡篠処（わたしのところ） - BOOTH">
     <meta property="og:description" content=
-    "『霊生を謳歌する悪霊』をモチーフとしたオリジナル3Dモデルです。 VRMファイル付き！ SNS推奨ハッシュタグ: #RyokoAku ☑obakeムーブとは: https://twitter.com/NamaeWatashino/status/1092789099650404353 ⚠Unitypackageインポート前に⚠ 事前に以下のAssetsをプロジェクト内にインポートしておいてください。 ・ReflexShader2.0 ・DynamicBone ℹVRChatへのアバターアップロード手順：">
+    "『霊生を謳歌する悪霊』がコンセプトのオリジナル3Dモデルです。 VRMファイル付き！ SNS推奨ハッシュタグ: #RyokoAku ☑obakeムーブとは: https://twitter.com/NamaeWatashino/status/1092789099650404353 ⚠Unitypackageインポート前に⚠ 事前に以下のAssetsをプロジェクト内にインポートしておいてください。 ・ReflexShader2.0 ・DynamicBone ℹVRChatへのアバターアップロード手順：">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/1154c32c-e4a4-4167-b688-5231756d79b1/i/1111224/6f150615-939b-481b-a716-5b83fe1e9659_base_resized.jpg">
     <meta property="og:url" content=
@@ -387,7 +387,7 @@
                         <div class=
                         "js-market-item-detail-description">
                           <p class="autolink u-text-wrap">
-                            『霊生を謳歌する悪霊』をモチーフとしたオリジナル3Dモデルです。
+                            『霊生を謳歌する悪霊』がコンセプトのオリジナル3Dモデルです。
                             VRMファイル付き！ SNS推奨ハッシュタグ: #RyokoAku
                             ☑obakeムーブとは:
                             https://twitter.com/NamaeWatashino/status/1092789099650404353
@@ -397,7 +397,7 @@
                             ℹVRChatへのアバターアップロード手順：
                             https://www.pixiv.net/fanbox/creator/17346029/post/572964
                             - - - It is an original 3D model with
-                            the motif of "Evil spirits who enjoy
+                            the concept of "Evil spirits who enjoy
                             the ghost life". With VRM file!
                             Recommended hashtag for SNS: #RyokoAku
                             ☑What is obakeMove:
@@ -475,22 +475,11 @@
                             "click" data-product-list=
                             "from market_show via tag_list to search_index"
                             href=
-                            "https://booth.pm/ja/search/Unity">
+                            "https://booth.pm/ja/search/3D%E3%82%AD%E3%83%A3%E3%83%A9%E3%82%AF%E3%82%BF%E3%83%BC">
                             <div class="search-guide-tablet-label">
                               <div class=
                               "search-guide-tablet-label-inner">
-                                Unity
-                              </div>
-                            </div></a><a class=
-                            "search-guide-tablet" data-tracking=
-                            "click" data-product-list=
-                            "from market_show via tag_list to search_index"
-                            href=
-                            "https://booth.pm/ja/search/3D%E3%83%A2%E3%83%87%E3%83%AB">
-                            <div class="search-guide-tablet-label">
-                              <div class=
-                              "search-guide-tablet-label-inner">
-                                3Dモデル
+                                3Dキャラクター
                               </div>
                             </div></a><a class=
                             "search-guide-tablet" data-tracking=
@@ -517,6 +506,17 @@
                             "search-guide-tablet" data-tracking=
                             "click" data-product-list=
                             "from market_show via tag_list to search_index"
+                            href=
+                            "https://booth.pm/ja/search/%E6%82%AA%E9%9C%8A">
+                            <div class="search-guide-tablet-label">
+                              <div class=
+                              "search-guide-tablet-label-inner">
+                                悪霊
+                              </div>
+                            </div></a><a class=
+                            "search-guide-tablet" data-tracking=
+                            "click" data-product-list=
+                            "from market_show via tag_list to search_index"
                             href="https://booth.pm/ja/search/VRM">
                             <div class="search-guide-tablet-label">
                               <div class=
@@ -533,6 +533,17 @@
                               <div class=
                               "search-guide-tablet-label-inner">
                                 VRChat
+                              </div>
+                            </div></a><a class=
+                            "search-guide-tablet" data-tracking=
+                            "click" data-product-list=
+                            "from market_show via tag_list to search_index"
+                            href=
+                            "https://booth.pm/ja/search/Unitypackage">
+                            <div class="search-guide-tablet-label">
+                              <div class=
+                              "search-guide-tablet-label-inner">
+                                Unitypackage
                               </div>
                             </div></a><a class=
                             "search-guide-tablet" data-tracking=
