updated at: 2020-03-09 19:24, 狐児院のおんなのこ - Atreides System - BOOTH

--- a/VRChat/82/1021482.html
+++ b/VRChat/82/1021482.html
@@ -241,6 +241,15 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
+                            <iframe width="560" height="315" src=
+                            "https://www.youtube.com/embed/ZI2V-dVCPco"
+                            frameborder="0" allowfullscreen
+                            ></iframe>
+                          </div>
+                        </div>
+                        <div>
+                          <div class=
+                          "market-item-detail-item-image-wrapper">
                             <img alt="狐児院のおんなのこ" class=
                             "market-item-detail-item-image" src=
                             "https://booth.pximg.net/091e5aa4-67bb-479c-8d17-dd9330fc9eeb/i/1021482/e640669f-28a2-4761-a5fc-e9837750a6a4_base_resized.jpg">
@@ -304,6 +313,9 @@
                       <div class=
                       "primary-image-thumbnails u-d-sp-none">
                         <a class="pointer">
+                        <div class=
+                        "youtube-thumbnail slick-thumbnail-border">
+                        </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
                           "https://booth.pximg.net/c/72x72_a2_g5/091e5aa4-67bb-479c-8d17-dd9330fc9eeb/i/1021482/e640669f-28a2-4761-a5fc-e9837750a6a4_base_resized.jpg">
@@ -412,7 +424,10 @@
                             ビートセイバー用に調整した"ANNA""KALEN"のアバターファイルを追加しました。
                             2020年3月2日
                             ビートセイバー用に調整したモデルに不具合があったため修正するとともに6キャラクター分のアバターを同梱しました。
-                            KitsuneBeatSaber_20200302 ☆利用規約
+                            KitsuneBeatSaber_20200302 2020年3月9日
+                            ビートセイバー用モデルの調整しました。
+                            KitsuneBeatSaber_20200309.zip
+                            VRMモデルを追加しました KitsuneVRM.zip ☆利用規約
                             VRChat向けオリジナルアバター「狐児院のおんなのこ」
                             〇本モデルを購入した時点で本利用規約に同意したものとします。
                             本規約は内容を変更される場合があり、最新のものが適用されます。
