--- a/VRChat/14/1264514.html
+++ b/VRChat/14/1264514.html
@@ -78,7 +78,7 @@
         <div class="market-item-detail u-bg-white"
         data-product-brand="uju" data-product-category="127"
         data-product-id="1264514" data-product-list="market_show"
-        data-product-price="3500" data-tracking="detail_item">
+        data-product-price="2000" data-tracking="detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
               <div class="container">
@@ -237,7 +237,7 @@
                                   "u-flex-1 u-min-w-0 u-d-flex u-flex-column u-mr-500">
                                     <div class=
                                     "variation-name u-text-wrap">
-                                      セール時購入した方のDL用
+                                      セール版（3/8~3/15）
                                     </div>
                                     <div class=
                                     "u-tpg-caption1 u-text-gray-300">
@@ -246,7 +246,7 @@
                                   </div>
                                   <div class=
                                   "variation-price u-text-right">
-                                    ¥ 3,500
+                                    ¥ 2,000
                                   </div>
                                 </div>
                                 <div class="variation-cart">
@@ -259,7 +259,7 @@
                                       "patch"><button class=
                                       "btn add-cart full-length"
                                       data-product-id="1264514"
-                                      data-product-price="3500"
+                                      data-product-price="2000"
                                       data-product-brand="uju"
                                       data-product-category="127"
                                       data-product-variant=
@@ -275,7 +275,7 @@
                                         <button class=
                                         "btn add-cart full-length"
                                         data-product-id="1264514"
-                                        data-product-price="3500"
+                                        data-product-price="2000"
                                         data-product-brand="uju"
                                         data-product-category="127"
                                         data-product-variant=
